# empit_polynom

./: README.md  main.py  polynom.py  pyproject.toml  requirements.txt  solvers.py
empit_coding_challenge/: main.py
empit_coding_challenge/tests/: test_arithmetic_operations.py  test_integration.py
tests/: test_arithmetic_operations.py  test_integration.py
