[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "build==1.3.0",
    "packaging==25.0",
    "pyproject_hooks==1.2.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "empit_coding_challenge"
version = "0.1.0"
description = "Polynomial integration solvers with analytical, numeric, and Monte Carlo methods"
authors = [{name="Mykola Ishchenko", email="ish.myk0la@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"

# Runtime dependencies (for users of your package)
dependencies = [
    "numpy==2.3.3"
]

[project.scripts]
poly-solver = "empit_coding_challenge.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "empit_coding_challenge*",
    "empit_coding_challenge.tests*"
]
